[tool.poetry]
name = "iss_locator"
version = "0.1.0"
description = ""
authors = ["rlivermorejr <rlivermorejr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
reverse_geocoder = "^1.5.1"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
